<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/navigation_marché"
        android:icon="@drawable/benefices"
        android:title="@string/title_marché" />

    <item
        android:id="@+id/navigation_simulation"
        android:icon="@drawable/simulation"
        android:title="@string/title_simulation" />

    <item
        android:id="@+id/navigation_note"
        android:icon="@drawable/notepad_edit_filled_icon_200459"
        android:title="@string/title_note" />

    <item
        android:id="@+id/navigation_compte"
        android:icon="@drawable/compte"
        android:title="@string/title_compte" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/title_wallet" />

</menu>