<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_marché">

    <fragment
        android:id="@+id/navigation_marché"
        android:name="com.example.cointrace.ui.marche.MarchéFragment"
        android:label="@string/title_marché"
        tools:layout="@layout/fragment_marche" />

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.example.cointrace.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.cointrace.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_compte"
        android:name="com.example.cointrace.ui.compte.CompteFragment"
        android:label="@string/title_compte"
        tools:layout="@layout/fragment_compte">

        <action
            android:id="@+id/action_navigation_compte_to_modifyAccountFragment"
            app:destination="@id/modifyAccountFragment" />
    </fragment>

    <fragment
        android:id="@+id/modifyAccountFragment"
        android:name="com.example.cointrace.ui.compte.ModifyAccountFragment"
        android:label="Modifier compte"
        tools:layout="@layout/fragment_modify_account" />

</navigation>
